--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}{%block title %}Home - Climate{% endblock %}
+{% extends "base.html" %}{%block title %}Home - ClimatForm{% endblock %}
 {% block content %}
 {% if user.is_authenticated %}
 
